add ref to cmd shell support

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ their own collection to supplement or replace the shared modulefiles.</p>
 Modules can be <b>loaded</b> and <b>unloaded</b> dynamically
 and atomically, in an
 clean fashion. All popular shells are supported, including
-<em>bash</em>, <em>ksh</em>, <em>zsh</em>, <em>sh</em>,
-<em>csh</em>, <em>tcsh</em>, <em>fish</em>, as well as some scripting languages
+<em>bash</em>, <em>ksh</em>, <em>zsh</em>, <em>sh</em>, <em>csh</em>,
+<em>tcsh</em>, <em>fish</em>, <em>cmd</em> as well as some scripting languages
 such as <em>perl</em>, <em>ruby</em>, <em>tcl</em>, <em>python</em>,
 <em>cmake</em> and <em>R</em>.
 </p>
